--- a/kubernetes/istio-demo-config.yaml
+++ b/kubernetes/istio-demo-config.yaml
@@ -6,8 +6,6 @@ metadata:
   namespace: istio-demo
 data:
   application-test.yml: |
-    server:
-      port: 8000
     spring:
       datasource:
         driver-class-name: com.mysql.jdbc.Driver
@@ -23,16 +21,15 @@ metadata:
   namespace: istio-demo
 data:
   application-test.yml: |
-    server:
-      port: 8001
     spring:
-      r2dbc:
-        url: r2dbc:mysql://120.55.78.23:3306/goods?useSSL=false
+      datasource:
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://120.55.78.23:3306/goods?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
         username: root
         password: 365tskj.dev123456
       redis:
         host: 120.55.78.23
-        database: 0
+        database: 1
         port: 6379
         password: 365tskj.dev123456
       cache:
@@ -46,16 +43,11 @@ metadata:
   namespace: istio-demo
 data:
   application-test.yml: |
-    server:
-      port: 8002
     spring:
-      datasource:
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://120.55.78.23:3306/order?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-        username: root
-        password: 365tskj.dev123456
       redis:
         host: 120.55.78.23
-        database: 0
+        database: 1
         port: 6379
         password: 365tskj.dev123456
+      cache:
+        type: redis
