--- a/kubernetes/istio-demo-deploy.yaml
+++ b/kubernetes/istio-demo-deploy.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: order
     service: order
+    admin: enabled
 spec:
   ports:
     - port: 8000
@@ -37,10 +38,6 @@ spec:
       version: v1
   template:
     metadata:
-#      annotations:
-#        prometheus.io/port: "8000"
-#        prometheus.io/scrape: "true"
-#        prometheus.io/path: "/actuator/prometheus"
       labels:
         app: order
         version: v1
@@ -54,7 +51,7 @@ spec:
         - name: order
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/order-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev,actuator --spring.config.additional-location=/etc/java/*.yml"]
+          args: [" --spring.profiles.active=test,actuator --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8000
               name: http
@@ -93,6 +90,7 @@ metadata:
   labels:
     app: goods
     service: goods
+    admin: enabled
 spec:
   ports:
     - port: 8001
@@ -113,9 +111,6 @@ kind: Deployment
 metadata:
   name: goods
   namespace: istio-demo
-  annotations:
-    prometheus.io/port: "8001"
-    prometheus.io/path: "/actuator/prometheus"
   labels:
     app: goods
     version: v1
@@ -140,7 +135,7 @@ spec:
         - name: goods
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/goods-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev,actuator --spring.config.additional-location=/etc/java/*.yml"]
+          args: [" --spring.profiles.active=test,actuator --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8001
               name: http
@@ -178,6 +173,7 @@ metadata:
   labels:
     app: stock
     service: stock
+    admin: enabled
 spec:
   ports:
     - port: 8002
@@ -209,9 +205,6 @@ spec:
       version: v1
   template:
     metadata:
-      annotations:
-        prometheus.io/port: "8002"
-        prometheus.io/path: "/actuator/prometheus"
       labels:
         app: stock
         version: v1
@@ -225,7 +218,7 @@ spec:
         - name: stock
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/stock-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev,actuator --spring.config.additional-location=/etc/java/*.yml"]
+          args: [" --spring.profiles.active=test,actuator --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8002
               name: http
@@ -254,3 +247,59 @@ spec:
             timeoutSeconds: 3
             successThreshold: 1
             failureThreshold: 5
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: admin
+  namespace: istio-demo
+  labels:
+    app: admin
+    service: admin
+    admin: enabled
+spec:
+  ports:
+    - port: 7071
+      name: http
+  selector:
+    app: admin
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: admin-account
+  namespace: istio-demo
+  labels:
+    account: admin
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: admin
+  namespace: istio-demo
+  labels:
+    app: admin
+    version: v1
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: admin
+      version: v1
+  template:
+    metadata:
+      labels:
+        app: admin
+        version: v1
+    spec:
+      serviceAccountName: admin-account
+      containers:
+        - name: admin
+          image: registry.cn-hangzhou.aliyuncs.com/istio-java/spring-boot-admin:1.0.0
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 7071
+              name: http
+              protocol: TCP
+          securityContext:
+            runAsUser: 1000
