--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>order-api</module>
 		<module>stock-api</module>
 		<module>goods-api</module>
+		<module>spring-boot-admin</module>
 	</modules>
 
 	<properties>
@@ -124,6 +125,17 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.49</version>
 			</dependency>
+
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-starter-client</artifactId>
+				<version>2.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-kubernetes-client</artifactId>
+				<version>2.0.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -136,6 +148,18 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<executions>
+						<execution>
+							<phase>clean</phase>
+						</execution>
+						<execution>
+							<id>docker-deploy</id>
+							<phase>deploy</phase>
+							<goals>
+								<goal>build-image</goal>
+							</goals>
+						</execution>
+					</executions>
 					<configuration>
 						<excludes>
 							<exclude>
