--- a/kubernetes/istio-demo-network.yaml
+++ b/kubernetes/istio-demo-network.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: istio-demo
 spec:
   rules:
-    - host: istio-demo.test.com
+    - host: order.k8s.com
       http:
         paths:
           - path: /
